@@ -213,6 +213,11 @@ client.on('message',async message => {
               message.author.send('Rich Presence Has Been Reset!');
               signal.info("A Owner executed s!rp reset");
           }
+		  if (game === 'refresh'){
+			client.user.setActivity(`s!help // ` + client.users.size + ` Users. // v` + ver);
+			message.author.send('Rich Presence has been Refreshed!');
+			signal.info("A Owner executed s!rp refresh");
+		  }
           else {
               client.user.setActivity(game + ' // bot.jyles.pw // Serving ' + client.users.size + ' players');
               message.author.send('Rich Presence Status Updated To: ' + game);
@@ -432,7 +437,7 @@ client.on("message", async message => {
 client.on("ready", () => {
     signal.info(`Bot has started, with ` + client.users.size + ` users, in ` + client.channels.size + ` channels of ` + client.guilds.size + ` guilds.`);
 
-    client.user.setActivity(`s!help // v` + ver + ` // ` + client.users.size + ` Users.`);
+    client.user.setActivity(`s!help // ` + client.users.size + ` Users. // v` + ver);
 });
 //client.login(config.token);
 client.login(process.env.BOT_TOKEN);
