@@ -1,7 +1,7 @@
 {
   "name": "SeedBot",
-  "version": "0.5.8",
-  "build": "583",
+  "version": "0.6",
+  "build": "600",
   "ownerID": "230485481773596672",
   "description": "A Bot by @Seed#0001 for Discord",
   "main": "bot.js",
