@@ -1,8 +1,8 @@
 |----------------------------------------------------------------------------------------------------
 |CHANGELOG                                                                                          |
 |----------------------------------------------------------------------------------------------------
-|        20.10.2018 VERISON 0.5.8 [PUBLIC RELEASE]                                                  |
-|        BUILD 583                                                                                  |
+|        12.11.2018 VERISON 0.6.0 [PUBLIC RELEASE]                                                  |
+|        BUILD 600                                                                                  |
 |----------------------------------------------------------------------------------------------------
 |  JOIN MY discord                                                                                  |
 |  gg.jyles.pw                                                                                      |
@@ -17,6 +17,7 @@
 |                                                                                                   |
 |                                                                                                   |
 | LATEST ADDITIONS                                                                                  |
+| Added s!rpc refresh								 Added on 12.11.2018    [0.6]					|
 | Moved Bot to Heroku (24/7)                         Added on 10.11.2018                            |
 | M  A  T  H                                         Added on 30.10.2018                            |
 | Remove s!help after command has been executed      Added on 30.10.2018                            |
@@ -43,6 +44,7 @@
 | Fixed Rich Presence Command                        Added on 21.6.2018                             |
 |                                                                                                   |
 | LATEST REMOVALS                                                                                   |
+| Bugs                                              Squished on 12.11.2018                          |
 | Bugs                                              Squished on 30.10.2018                          |
 | Removed Electron GUI                               Removed on 20.10.2018                          |
 | Squished some Bugs                                 Removed on 13.10.2018                          |
